finish merge