@@ -4,7 +4,6 @@
  */
 package com.jyuzawa.onnxruntime;
 
-import com.jyuzawa.onnxruntime_extern.OrtOpenVINOProviderOptions;
 import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
 import java.util.Map;
@@ -17,11 +16,11 @@ final class ExecutionProviderOpenVINOConfig extends ExecutionProviderMapConfig {
 
     @Override
     protected void appendToSessionOptions(
-            MemorySession memorySession,
+            Arena memorySession,
             ApiImpl api,
-            MemoryAddress sessionOptions,
-            MemoryAddress keys,
-            MemoryAddress values,
+            MemorySegment sessionOptions,
+            MemorySegment keys,
+            MemorySegment values,
             int numProperties) {
         api.checkStatus(api.SessionOptionsAppendExecutionProvider_OpenVINO_V2.apply(
                 sessionOptions, keys, values, numProperties));
